# veronymous

./: .gitignore  Cargo.toml  README.md  build-router-agent.sh  build-token-service.sh  veronymous-router-agent.Dockerfile  veronymous-token-service.Dockerfile
crypto/bb-signatures/: Cargo.toml  README.md
crypto/bb-signatures/src/: keys.rs  signature.rs
crypto/commitments/src/: error.rs  pedersen_commitment.rs  pok_pedersen_commitment.rs
crypto/common/src/: lib.rs
crypto/ps-signatures/: Cargo.toml  README.md
crypto/ps-signatures/src/: blind_signature.rs  error.rs  keys.rs  lib.rs  pok_sig.rs  signature.rs
veronymous-client/: Cargo.toml
veronymous-client/src/: main.rs
veronymous-connection/: Cargo.toml
veronymous-connection/src/: error.rs  lib.rs  model.rs
veronymous-connection/src/dep/: handler.rs  protocol.rs
veronymous-connection/src/protocol/: client.rs  mod.rs  server.rs
veronymous-connection/tests/: connection.rs
veronymous-router-agent/: Cargo.toml  build.rs  veronymous_router_agent.yml  veronymous_router_agent_config.yml
veronymous-router-agent/certs/tls/: ca.key  ca.pem  ca.srl  server.key  server.pem
veronymous-router-agent/certs/token-service/auth/: client.key  client.pem
veronymous-router-agent/proto/: router_agent.proto
veronymous-router-agent/resources/certs/: ca.pem
veronymous-router-agent/resources/tls/: server.key  server.pem
veronymous-router-agent/resources/token_issuer/: token_issuer_client.key  token_issuer_client.pem
veronymous-router-agent/src/: main.rs
veronymous-router-agent/src/config/: mod.rs
veronymous-router-agent/src/connections/: service.rs
veronymous-router-agent/src/controller/: router.rs
veronymous-router-agent/src/db/: mod.rs
veronymous-router-agent/src/db/connections_db/: mod.rs  redis.rs
veronymous-router-agent/src/db/connections_state_db/: mod.rs  redis.rs
veronymous-router-agent/src/db/token_ids_db/: mod.rs  redis.rs
veronymous-router-agent/src/error/: mod.rs
veronymous-router-agent/src/router/: service.rs
veronymous-router-agent/src/server/: mod.rs
veronymous-router-agent/src/service/: connections.rs  epoch.rs  mod.rs  router.rs  token_service.rs  wireguard.rs
veronymous-router-agent/src/token_issuer/: grpc.rs  mod.rs  service.rs
veronymous-router-agent/src/wireguard/: mod.rs  service.rs
veronymous-router-agent/tests/: client_test.rs
veronymous-router-client/: Cargo.toml  build.rs
veronymous-router-client/src/: error.rs  lib.rs  main.rs
veronymous-router-client/src/error/: mod.rs
veronymous-router-client/src/grpc/: mod.rs
veronymous-router-client/src/model/: mod.rs
veronymous-router-client/tests/: mod.rs
veronymous-router-client/tests/test_client/: grpc.rs  mod.rs
veronymous-test/: Cargo.toml  README.md  build.rs
veronymous-test/certs/token-issuer/: client.key  client.pem
veronymous-test/tests/: mod.rs
veronymous-test/tests/common/: mod.rs
veronymous-test/tests/common/token_issuer/: mod.rs
veronymous-test/tests/router_agent/: mod.rs
veronymous-token/: Cargo.toml
veronymous-token-service/: Cargo.toml  README.md  build.rs  veronymous_token_service.yml
veronymous-token-service/proto/: veronymous_token_info_service.proto  veronymous_token_service.proto
veronymous-token-service/src/: config.rs  error.rs  main.rs
veronymous-token-service/src/controller/: mod.rs  token_controller.rs  token_info_controller.rs
veronymous-token-service/src/service/: key_management_service.rs  mod.rs  token_service.rs
veronymous-token/crypto/bb-signatures/: Cargo.toml
veronymous-token/crypto/bb-signatures/src/: keys.rs  signature.rs
veronymous-token/crypto/commitments/: Cargo.toml
veronymous-token/crypto/commitments/src/: lib.rs  pedersen_commitment.rs  pok_pedersen_commitment.rs
veronymous-token/crypto/common/: Cargo.toml
veronymous-token/crypto/ps-signatures/: Cargo.toml
veronymous-token/crypto/ps-signatures/src/: blind_signature.rs  error.rs  keys.rs  lib.rs  pok_sig.rs  serde.rs  signature.rs
veronymous-token/src/: error.rs  issuer.rs  lib.rs  root.rs  root_exchange.rs  serde.rs  token.rs  utils.rs
