[package]
name = "veronymous"
version = "0.1.0"
edition = "2021"
authors = ["Noah Bouma"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "veronymous-router-agent",
    "veronymous-connection",
    "veronymous-router-client",
    "crypto/ps-signatures",
    "crypto/bb-signatures",
    "crypto/commitments",
    "crypto/common"
]