[package]
name = "veronymous"
version = "0.1.0"
edition = "2021"
authors = ["Noah Bouma"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "veronymous-router-agent",
    "veronymous-connection",
    "veronymous-router-client",
    "veronymous-token",
    "veronymous-token/crypto",
    "veronymous-token/crypto/ps-signatures",
    "veronymous-token/crypto/bb-signatures",
    "veronymous-token/crypto/commitments",
    "veronymous-token/crypto/common"
]