[package]
name = "veronymous_connection"
version = "0.1.0"
edition = "2021"
description = "Implementation of the Veronymous connection protocol"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
log = "0.4.14"
env_logger = "0.9.0"
thiserror = "1.0.30"
ps_signatures = { path = "../veronymous-token/crypto/ps-signatures" }
veronymous_token = { path = "../veronymous-token" }

# Might not need actix-rt
[dev-dependencies]
base64 = "0.13.0"
rand = "0.7"
crypto_common = { path = "../veronymous-token/crypto/common" }
