[package]
name = "veronymous-router-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1.0"
thiserror = "1.0.30"
config = "0.11.0"
futures = "0.3.17"
tokio = { version = "1.15.0", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread"] }
# TODO: Use exact features only
libp2p = { version = "0.41.0", features = ["tcp-tokio"] }
log = "0.4.14"
env_logger = "0.9.0"