[package]
name = "veronymous_router_agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.133", features = ["derive"] }
thiserror = "1.0.30"
config = "0.11.0"
# TODO: Set used features only
tokio = { version = "1.15.0", features = ["full"] }
base64 = "0.13.0"
log = "0.4.14"
env_logger = "0.9.0"
tonic = "0.6"

[dependencies.veronymous_connection]
path = "../veronymous-connection"

[dependencies.wg_manager_service_common]
git = "ssh://git@github.com/boumba100/wireguard-manager-service.git"
rev = "4d13e768d1846320e5660e17bfe5c0ed7256ddd0"