[package]
name = "veronymous_router_agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.13.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.130", features = ["derive"] }
tonic = { version = "0.8.3", features = ["tls"] }
log = "0.4.14"
env_logger = "0.10.0"
thiserror = "1.0.30"
prost = "0.11.6"
config = "0.11.0"
base64 = "0.13.0"
redis = "0.22.3"
rand = "0.7"

[dependencies.wg_manager_service_common]
git = "ssh://git@github.com/boumba100/wireguard-manager-service.git"
rev  = "e1dad005b4b7817e354a8fa08cc01a71925ea540"

[dependencies.veronymous_token]
path = "../veronymous-token"

[dependencies.ps_signatures]
path = "../veronymous-token/crypto/ps-signatures"

[build-dependencies]
tonic-build = "0.8.4"
