[package]
name = "veronymous_router_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
veronymous_connection = { path = "../veronymous-connection" }
veronymous_token = { path = "../veronymous-token" }
ps_signatures = { path = "../veronymous-token/crypto/ps-signatures" }
crypto_common = { path = "../veronymous-token/crypto/common" }
rand = "0.7.3"
pairing-plus = "0.19"