[package]
name = "veronymous_router_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
veronymous_token = { path = "../veronymous-token" }
ps_signatures = { path = "../veronymous-token/crypto/ps-signatures" }
crypto_common = { path = "../veronymous-token/crypto/common" }
tonic = { version = "0.8.3", features = ["tls"] }
prost = "0.11.6"
serde = { version = "1.0.130", features = ["derive"] }
thiserror = "1.0.30"

[build-dependencies]
tonic-build = "0.8.4"
