[package]
name = "veronymous-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
veronymous_router_agent = { path = "../veronymous-router-agent" }
veronymous_router_client = { path = "../veronymous-router-client" }
crypto_common = { path = "../veronymous-token/crypto/common" }
veronymous_token = { path = "../veronymous-token" }
ps_signatures = { path = "../veronymous-token/crypto/ps-signatures" }
base64 = "0.13.0"
rand = "0.7"
tokio = { version = "1.16", features = ["full"] }
prost = "0.11.6"
tonic = { version = "0.8.3", features = ["tls"] }
serde = { version = "1.0.130", features = ["derive"] }

[build-dependencies]
tonic-build = "0.8.4"