[package]
name = "veronymous_token_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.21.5"
rocksdb = "0.17.0"
config = "0.11.0"
tokio = { version = "1.13.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.130", features = ["derive"] }
tonic = { version = "0.6", features = ["tls"] }
prost = "0.9"
log = "0.4.14"
env_logger = "0.9.0"
thiserror = "1.0.30"
rand = "0.7"
ps_signatures = { path = "../veronymous-token/crypto/ps-signatures" }
veronymous_token = { path = "../veronymous-token" }

[build-dependencies]
tonic-build = "0.6"