[package]
name = "ps_signatures"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.133"
base64 = "0.13.0"
blake2 = "0.8"
pairing-plus = "0.19"
rand = "0.7"
ff-zeroize = "0.6"
thiserror = "1.0.30"
byteorder = "1.4.3"
crypto_common = { path = "../common" }
commitments = { path = "../commitments" }